--- a/electron-quick-start/sections/nav-bar.html
+++ b/electron-quick-start/sections/nav-bar.html
@@ -2,4 +2,7 @@
     <div class="nav-bar page">
         Dashboard | Asset | Reports
     </div>
+    <script type="text/javascript">
+        require('./render-process/nav-bar')
+    </script>
 </template>
