--- a/electron-quick-start/index.html
+++ b/electron-quick-start/index.html
@@ -12,13 +12,17 @@
     <link rel="stylesheet" href="assets/css/asset-detail.css">
     <link rel="stylesheet" href="assets/css/search-bar.css">
     <link rel="stylesheet" href="assets/css/asset-list.css">
+    <link rel="stylesheet" href="assets/css/report.css">
+    <link rel="stylesheet" href="assets/css/settings.css">
+    <link rel="stylesheet" href="assets/css/pop-up.css">
     
 
     <link rel="import" href="sections/login.html">
     <link rel="import" href="sections/nav-bar.html">
     <link rel="import" href="sections/signup.html">
     <link rel="import" href="sections/home.html">
-    
+    <link rel="import" href="sections/settings.html">
+    <link rel="import" href="sections/popup.html">
     <title>Hello World!</title>
 
   </head>
