--- a/electron-quick-start/sections/login.html
+++ b/electron-quick-start/sections/login.html
@@ -1,16 +1,26 @@
 <template class="task-template">
-    <div id="login-view" class="login page">
-      <form id="login-form">
-        <input type="text" id="login-username" placeholder="Username"><div id="userNameNotification"></div>
-        <input type="password" id="login-password" placeholder="Password"><div id="passwordNotification"></div>
-        <input type="submit" id="login-submit">
-      </form>
-      <a href="" id="signupLink">+Add User</a>
-      <div id="login-notification"></div>
+  <div id="login-view" class="login page row-4 ">
+    <div class="col-1"></div>
+    <div class="col-1 fill-parent" >
+      <div class="row-1 col-6 atLeast100heigh"></div>
+      <div id="form-container" class="row-3 col-6">
+        <center><h3>Login</h3></center>
+        <form id="login-form" >
+            <input type="text" class="loginInputText" id="login-username" placeholder="Username"><div id="userNameNotification"></div>
+            <input type="password" class="loginInputText" id="login-password" placeholder="Password"><div id="passwordNotification"></div>
+          </br>
+            <input type="submit" id="login-submit" class="loginInputText">
+        </form>
+        <div><a href="" id="signupLink">+Add User</a></div>
+        <div id="login-notification"></div>
+      </div>
+      <div class="row-1 col-6"></div>
+      </div>
+      <div class="col-1 login"></div>
       <script type="text/javascript">
         console.log('render-process script here')
         require('./render-process/login')
       </script>
-    </div>
+  </div>
 </template>
 
