--- a/electron-quick-start/sections/signup.html
+++ b/electron-quick-start/sections/signup.html
@@ -1,14 +1,24 @@
 <template class="task-template">
-    <div id="signup-view" class="signup page">
-        <form id="signup-form">
-            <input type="text" id="signup-username" placeholder="Enter Username"><div id="signupUserNameNotfication"></div>
-            <input type="password" id="signup-password" placeholder="Password">
-            <input type="password" id="signup-password2" placeholder="Reenter Password"><div id="signupPasswordNotification"></div>
-            <input type="text" id="signup-firstName" placeholder="First Name">
-            <input type="text" id="signup-lastName" placeholder="Last Name">
-            <div id = 'signupNotification'></div>
-            <input type="submit" id="signup-submit">
-        </form>
+    <div id="signup-view" class="signup page row-4">
+        <div class="col-1"></div>
+        <div class="col-1">
+            <div class="row-1 col-6 atLeast100heigh"></div>
+            <div id="form-container2" class="row-3 col-6">
+                    <center><h3>Sign Up</h3></center>
+                <form id="signup-form">
+                    <input type="text" class="loginInputText" id="signup-username" placeholder="Enter Username"><div id="signupUserNameNotfication"></div>
+                    <input type="password" class="loginInputText" id="signup-password" placeholder="Password"></br>
+                    <input type="password" class="loginInputText" id="signup-password2" placeholder="Reenter Password"><div id="signupPasswordNotification"></div>
+                    <input type="text" id="signup-firstName" class="loginInputText" placeholder="First Name"></br>
+                    <input type="text" id="signup-lastName" class="loginInputText" placeholder="Last Name"></br>
+                    <div id = 'signupNotification'></div>
+                </br>
+                    <input type="submit" class="loginInputText" id="signup-submit">
+                </form>
+                <div><a href="" id="logLink">-Login</a></div>
+        </div>
+        </div>
+        <div class="col-1"></div>
         <script type="text/javascript">
               require('./render-process/signup')
         </script>
