--- a/electron-quick-start/assets/reports/report_1.html
+++ b/electron-quick-start/assets/reports/report_1.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" href="../css/report.css"> 
     <title>Report View</title>
 </head>
-<body>
+<body id="reportContainer">
         Report display
-        <table id="reportContainer"></table>
+        <!-- <table id="reportContainer"></table> -->
 </body>
 <script type="text/javascript">
   require('./report_1.js');
